k8s/dev/deploy_https_qKet_backend_dev.yaml
# =========================================================
# dev Backend Deployment
# =========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qket-backend
  namespace: qket-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qket-backend
  template:
    metadata:
      labels:
        app: qket-backend
    spec:
      containers:
        - name: qket-backend
          # GitHub Actions에서 sed 로 치환
          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/team5/ecr/qket:backend-3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: qket-backend-service
  namespace: qket-dev
spec:
  type: ClusterIP
  selector:
    app: qket-backend
  ports:
    - port: 80
      targetPort: 8080
